	PR c++/11687 	* call.c (standard_conversion): Improve comments. 	(perform_direct_initialization): Make sure we return an expression 	of the correct type. 	* typeck.c (build_static_cast): Check for ambiguity and 	accessibility when performing conversions.

PR c++/11687
	* g++.dg/expr/static_cast5.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71157 138bc75d-0d04-0410-961f-82ee72b054a4